After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783237 - Error looping over system_data_dirs
Error looping over system_data_dirs
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-30 10:06 UTC by Bastien Nocera
Modified: 2017-06-20 19:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell-extension: fix warning when iterating over extension list (3.65 KB, patch)
2017-06-20 19:29 UTC, Ray Strode [halfline]
committed Details | Review

Description Bastien Nocera 2017-05-30 10:06:50 UTC
In git:

gnome-session/gnome-session/gsm-shell-extensions.c: In function ‘gsm_shell_extensions_scan’:
gnome-session/gnome-session/gsm-shell-extensions.c:145:30: warning: comparison between pointer and zero character constant [-Wpointer-compare]
   while ((*system_data_dirs) != '\0')
                              ^~
gnome-session/gnome-session/gsm-shell-extensions.c:145:10: note: did you mean to dereference the pointer?
   while ((*system_data_dirs) != '\0')
Comment 1 Ray Strode [halfline] 2017-06-20 19:29:33 UTC
Created attachment 354113 [details] [review]
shell-extension: fix warning when iterating over extension list

This should fix this warning:

gnome-session/gnome-session/gsm-shell-extensions.c: In function ‘gsm_shell_extensions_scan’:
gnome-session/gnome-session/gsm-shell-extensions.c:145:30: warning: comparison between pointer and zero character constant [-Wpointer-compare]
   while ((*system_data_dirs) != '\0')
                              ^~
gnome-session/gnome-session/gsm-shell-extensions.c:145:10: note: did you mean to dereference the pointer?
   while ((*system_data_dirs) != '\0')
Comment 2 Ray Strode [halfline] 2017-06-20 19:30:15 UTC
Attachment 354113 [details] pushed as ea42881 - shell-extension: fix warning when iterating over extension list