shell-extension: fix warning when iterating over extension list

This should fix this warning:

gnome-session/gnome-session/gsm-shell-extensions.c: In function ‘gsm_shell_extensions_scan’:
gnome-session/gnome-session/gsm-shell-extensions.c:145:30: warning: comparison between pointer and zero character constant [-Wpointer-compare]
   while ((*system_data_dirs) != '\0')
                              ^~
gnome-session/gnome-session/gsm-shell-extensions.c:145:10: note: did you mean to dereference the pointer?
   while ((*system_data_dirs) != '\0')

https://bugzilla.gnome.org/show_bug.cgi?id=783237